[project]
name = "tradingtools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
